--- a/package.json
+++ b/package.json
@@ -8,21 +8,56 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "markdown-it-emoji": "^1.4.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3",
+    "vue-router": "^3.0.7",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.7.4",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-component": "^1.1.1",
+    "babel-plugin-import": "^1.13.0",
+    "babel-preset-es2015": "^6.24.1",
+    "compression-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.2.0",
+    "element-ui": "^2.13.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "fibers": "^4.0.2",
+    "highlight.js": "^9.16.2",
+    "jquery": "^3.4.1",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "lodash": "^4.17.15",
+    "markdown-it": "^10.0.0",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-anchor": "^5.2.5",
+    "markdown-it-block-embed": "0.0.3",
+    "markdown-it-deflist": "^2.0.3",
+    "markdown-it-emphasis-alt": "^1.0.8",
+    "markdown-it-footnote": "^3.0.2",
+    "markdown-it-implicit-figures": "^0.9.0",
+    "markdown-it-imsize": "^2.0.1",
+    "markdown-it-link-attributes": "^3.0.0",
+    "markdown-it-mark": "^3.0.0",
+    "markdown-it-slack": "^1.2.0",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
+    "markdown-it-task-lists": "^2.1.1",
+    "markdown-it-toc-done-right": "^4.1.0",
     "node-sass": "^4.12.0",
+    "nprogress": "^0.2.0",
+    "sass": "^1.3.0",
     "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "vue-markdown": "^2.2.4",
     "vue-template-compiler": "^2.6.10"
   }
 }
