--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "markdown-it-emoji": "^1.4.0",
+    "markdown-it-toc-and-anchor": "^4.2.0",
+    "string": "^3.3.3",
+    "uslug": "^1.0.4",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
     "vuex": "^3.0.1"
@@ -21,6 +24,7 @@
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "@vue/eslint-config-standard": "^4.0.0",
+    "ant-design-vue": "^1.4.10",
     "babel-eslint": "^10.0.3",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.13.0",
